# Dolphin

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/: README.md
artifacts/cmie_income/: forest_selection.csv
artifacts/world_bank_gdp/: membership.csv  metrics.json  rules_natural_language.txt
configs/: cmie_income.json  world_bank_entities.csv  world_bank_gdp.json
data/: README.md
notebooks/: eda_cmie_dolphin.ipynb  eda_world_bank_gdp_dolphin.ipynb  run_cmie_dolphin.ipynb  run_cmie_trajtrack.ipynb  run_world_bank.ipynb
paper_artifacts/: README.md
paper_artifacts/cmie_income/: forest_summary.csv  metrics.json  rules.csv  rules_natural_language.txt
paper_artifacts/world_bank_gdp/: forest_selection.csv  forest_summary.csv  rules.csv
scripts/: create_eda_notebooks.py  prepare_cmie_panel.py  regenerate_dolphin_summaries.py  regenerate_dolphin_trajectory_plots.py  regenerate_dolphin_trajectory_plots_core.py  regenerate_dolphin_visualizations.py  regenerate_flair_trajectory_plots.py  regenerate_trajtrack_summaries.py  regenerate_trajtrack_visualizations.py  repair_cmie_csv.py  run_dolphin.py  run_dolphin_core.py  run_dolphin_world_bank.py  run_trajtrack.py  run_trajtrack_world_bank.py  run_world_bank.py  sweep_cmie_dolphin.py  sweep_cmie_trajtrack.py  sweep_dolphin.py  sweep_dolphin_binary.py  sweep_trajtrack.py  sweep_trajtrack_binary.py
src/tsd/: dolphin.py  features.py  interestingness.py  io.py  metrics.py  pipeline.py  plotting.py  preprocessing.py  rf_rules.py  spans.py  trajtrack.py  tree_viz.py
(+2 files in other folders)
