[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dolphin-longitudinal-subgroups"
version = "0.1.0"
description = "DOLPHIN: interpretable subgroup discovery for longitudinal target trajectories"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "matplotlib",
  "seaborn",
]

[tool.setuptools.packages.find]
where = ["src"]
